--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,4 +32,5 @@
 en:
   hello: "Hello world"
   user:
-    not_autorized: "HI" 
+    not_autorized: "YOU ARE NOT AUTHORIZED" 
+    already_subscribed: 'YOU ARE ALREADY SUBSCRIBED'
